--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -310,6 +310,36 @@
       height: 25px;
       width: 25px;
     }
+    /* Responsividade */
+    @media (max-width: 768px) {
+      .content {
+        padding: 1em;
+      }
+
+      table, th, td {
+        font-size: 0.9em;
+      }
+
+      .action_button {
+        flex-direction: column;
+        align-items: center;
+        gap: 1em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      table, th, td {
+        font-size: 0.8em;
+      }
+
+      .content {
+        padding: 0.5em;
+      }
+
+      h1 {
+        font-size: 1.5em;
+      }
+    }
 
 
    
