--- a/payment/templates/payment/pages/new_payment.html
+++ b/payment/templates/payment/pages/new_payment.html
@@ -106,6 +106,69 @@
     button:hover {
       background-color: #0056b3;
     }
+    /* Responsividade */
+    @media (max-width: 1024px) {
+      .content {
+        width: 90%;
+      }
+
+      .payment-form {
+        width: 100%;
+      }
+
+      input, select {
+        padding: 0.6em;
+      }
+
+      button {
+        padding: 0.6em 1.2em;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .content {
+        width: 100%;
+        padding: 1.5em;
+      }
+
+      .payment-form {
+        width: 100%;
+        max-width: 100%;
+      }
+
+      input, select {
+        padding: 0.5em;
+        font-size: 1em;
+      }
+
+      button {
+        width: 100%;
+        padding: 0.7em 1.5em;
+        font-size: 1em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .content {
+        padding: 1em;
+      }
+
+      .payment-form {
+        width: 100%;
+        gap: 1.2em;
+      }
+
+      input, select {
+        padding: 0.5em;
+        font-size: 0.9em;
+      }
+
+      button {
+        width: 100%;
+        padding: 0.8em 1.6em;
+        font-size: 1.1em;
+      }
+    }
   </style>
 </body>
 </html>
