--- a/receive/templates/receive/pages/searchreceive.html
+++ b/receive/templates/receive/pages/searchreceive.html
@@ -114,4 +114,62 @@
     font-weight: bold;
     color: #007bff;
   }
+  /* Responsividade */
+  @media (max-width: 1024px) {
+    .input-group input,
+    .input-group select {
+      width: 10em;
+    }
+
+    .devedor-item {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .botao-filtrar {
+      padding: 0.6em 1.2em;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .sub_menu {
+      flex-direction: column;
+      gap: 1em;
+    }
+
+    .input-group input,
+    .input-group select {
+      width: 100%;
+      font-size: 0.9em;
+    }
+
+    .devedor-item {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .botao-filtrar {
+      padding: 0.7em 1.3em;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .sub_menu {
+      flex-direction: column;
+      gap: 1em;
+    }
+
+    .input-group input,
+    .input-group select {
+      width: 100%;
+      font-size: 0.8em;
+    }
+
+    .devedor-item {
+      grid-template-columns: 1fr;
+    }
+
+    .botao-filtrar {
+      padding: 0.8em 1.5em;
+      font-size: 1.1em;
+    }
+  }
 </style>
